--- a/app/src/main/res/layout/fragment_prestamo.xml
+++ b/app/src/main/res/layout/fragment_prestamo.xml
@@ -6,9 +6,11 @@
     tools:context=".fragments.lista.FragmentPrestamo">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+   <androidx.recyclerview.widget.RecyclerView
+       android:id="@+id/RcvPrestamos"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
+
+   </androidx.recyclerview.widget.RecyclerView>
 
 </FrameLayout>
