--- a/app/src/main/res/layout/lista_libro.xml
+++ b/app/src/main/res/layout/lista_libro.xml
@@ -20,7 +20,6 @@
             android:id="@+id/IvCover"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/Halo"
 
             />
 
@@ -41,6 +40,7 @@
             android:layout_height="wrap_content"
             android:text="Autor"
             android:textStyle="bold"
+            android:textColor="@color/black"
             android:layout_below="@+id/TvName"
             android:layout_toEndOf="@id/IvCover"
             android:layout_marginLeft="10dp"
@@ -52,6 +52,7 @@
             android:layout_height="wrap_content"
             android:text="Genero"
             android:textStyle="bold"
+            android:textColor="@color/black"
             android:layout_below="@+id/TvAuthor"
             android:layout_toEndOf="@id/IvCover"
             android:layout_marginLeft="10dp"
@@ -63,6 +64,7 @@
             android:layout_height="wrap_content"
             android:text="Paginas"
             android:textStyle="bold"
+            android:textColor="@color/black"
             android:layout_below="@+id/TvGenre"
             android:layout_toEndOf="@id/IvCover"
             android:layout_marginLeft="10dp"
@@ -72,12 +74,24 @@
             android:id="@+id/TvId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="ID:"
+            android:text="ID"
             android:textStyle="bold"
-            android:layout_below="@+id/TvGenre"
+            android:textColor="@color/black"
+            android:layout_below="@+id/TvPageCount"
             android:layout_toEndOf="@id/IvCover"
             android:layout_marginLeft="10dp"
             android:layout_marginStart="10dp"
             />
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/BtnAgregar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="0dp"
+            android:layout_marginVertical="40dp"
+            android:src="@drawable/ic_baseline_delete_24" />
+
     </RelativeLayout>
+
 </androidx.cardview.widget.CardView>
