--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,11 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/book"
+        android:id="@+id/fragmentLibro"
         android:icon="@drawable/ic_book_24"
         android:title="Libros"/>
     <item
-        android:id="@+id/borrow"
+        android:id="@+id/fragmentPrestamo"
         android:icon="@drawable/ic_borrowbook_color_24"
         android:title="Prestamos"/>
 </menu>
