--- a/app/src/main/res/layout/fragment_actualizar_libro.xml
+++ b/app/src/main/res/layout/fragment_actualizar_libro.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.lista.add.FragmentAddlibro">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".fragments.actualizar.ActualizarLibro">
 
     <ImageView
-        android:id="@+id/image"
-        android:layout_width="213dp"
-        android:layout_height="135dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,9 +62,8 @@
         android:id="@+id/btnGuardar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="540dp"
-        android:text="Agregar"
+        android:layout_marginTop="580dp"
+        android:text="Guardar"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="30dp" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
