--- a/app/src/main/res/layout/fragment_actualizar_prestamo.xml
+++ b/app/src/main/res/layout/fragment_actualizar_prestamo.xml
@@ -1,74 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.agregar.FragmentAddlibro"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".fragments.actualizar.ActualizarPrestamoFragment"
     android:background="@color/white"
     android:backgroundTint="#E3DAC9">
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="213dp"
-        android:layout_height="135dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <EditText
-        android:id="@+id/txtNombre"
+        android:id="@+id/TxtEstudiante"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="250dp"
-        android:drawableLeft="@drawable/ic_book_24"
-        android:hint="Nombre"
+        android:drawableStart="@drawable/ic_baseline_person_24"
+        android:hint=" Nombre del Estudiante"
         android:textAlignment="center"
+        app:layout_constraintBaseline_toTopOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="10dp" />
 
     <EditText
-        android:id="@+id/txtAutor"
+        android:id="@+id/TxtLibro"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="320dp"
-        android:drawableLeft="@drawable/ic_baseline_person_24"
-        android:hint="Autor"
+        android:drawableStart="@drawable/ic_book_24"
+        android:hint="Nombre del libro"
         android:textAlignment="center"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="10dp" />
 
     <EditText
-        android:id="@+id/txtGenero"
+        android:id="@+id/TxtFechaRetiro"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="390dp"
-        android:drawableLeft="@drawable/ic_baseline_collections_bookmark_24"
-        android:hint="Genero"
+        android:drawableStart="@drawable/ic_date_24"
+        android:hint="Fecha de Retiro"
         android:textAlignment="center"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="10dp" />
 
     <EditText
-        android:id="@+id/txtPaginas"
+        android:id="@+id/TxtFechaEntrega"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="460dp"
-        android:drawableLeft="@drawable/ic_baseline_pages_24"
-        android:hint="Numero de Paginas"
+        android:drawableStart="@drawable/ic_date_24"
+        android:hint="Fecha de Entrega"
         android:textAlignment="center"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="10dp" />
 
     <Button
-        android:id="@+id/btnGuardar"
+        android:id="@+id/BtnEditarP"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="540dp"
-        android:text="Agregar"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="30dp" />
+        android:layout_marginTop="536dp"
+        android:text="Editar"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
