--- a/app/src/main/res/layout/fragment_libro.xml
+++ b/app/src/main/res/layout/fragment_libro.xml
@@ -6,7 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".fragments.lista.FragmentLibro">
+    tools:context=".fragments.lista.FragmentLibro"
+    android:background="@color/white"
+    android:backgroundTint="#E3DAC9">
     <!-- TODO: Update blank fragment layout -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/RcvLibro"
