--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,4 +16,8 @@
 
 
     </style>
+
+
+    <style name="ThemeSplash" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    </style>
 </resources>
