Home screen deleted

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/homeScreen_Fragment">
+    app:startDestination="@id/fragmentLibro">
 
     <fragment
         android:id="@+id/fragmentLibro"
@@ -52,9 +52,4 @@
     <action android:id="@+id/agregarPrestamo" app:destination="@+id/addPrestamoFragment"/>
     <action android:id="@+id/editarPrestamo" app:destination="@+id/actualizarPrestamoFragment"/>
     <action android:id="@+id/listaPrestamo" app:destination="@+id/fragmentPrestamo"/>
-    <fragment
-        android:id="@+id/homeScreen_Fragment"
-        android:name="com.example.libraryapproom.fragments.HomeScreen_Fragment"
-        android:label="fragment_home_screen_"
-        tools:layout="@layout/fragment_home_screen_" />
 </navigation>
