--- a/app/src/main/res/layout/fragment_prestamo.xml
+++ b/app/src/main/res/layout/fragment_prestamo.xml
@@ -5,8 +5,8 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.lista.FragmentPrestamo"
-    android:background="@color/white"
-    android:backgroundTint="#E3DAC9">
+    android:background="?attr/backgroundColor"
+    >
 
     <!-- TODO: Update blank fragment layout -->
    <androidx.recyclerview.widget.RecyclerView
