--- a/app/src/main/res/layout/fragment_actualizar_prestamo.xml
+++ b/app/src/main/res/layout/fragment_actualizar_prestamo.xml
@@ -5,8 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.actualizar.ActualizarPrestamoFragment"
-    android:background="@color/white"
-    android:backgroundTint="#E3DAC9">
+    android:background="?attr/backgroundColor">
 
     <EditText
         android:id="@+id/TxtEstudiante"
