--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,14 +4,16 @@
         <!-- Primary brand color. -->
         <item name="colorPrimary">#5870d4</item>
         <item name="colorPrimaryVariant">#5870d4</item>
-        <item name="colorOnPrimary">#E3DAC9</item>
+        <item name="colorOnPrimary">@color/WhiteCream</item>
 
         <!-- Secondary brand color. -->
         <item name="colorSecondary">#f86e30</item>
         <item name="colorSecondaryVariant">#f3a234</item>
         <item name="colorOnSecondary">@color/white</item>
+        <item name="backgroundColor">@color/WhiteCream</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+
         <!-- Customize your theme here. -->
 
 
@@ -20,4 +22,5 @@
 
     <style name="ThemeSplash" parent="Theme.MaterialComponents.DayNight.NoActionBar">
     </style>
+
 </resources>
