--- a/app/src/main/res/layout/fragment_actualizar_libro.xml
+++ b/app/src/main/res/layout/fragment_actualizar_libro.xml
@@ -8,9 +8,9 @@
     android:background="?attr/backgroundColor">
 
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="60dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -19,9 +19,11 @@
         android:id="@+id/txtNombre"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="250dp"
+        android:layout_marginTop="190dp"
         android:drawableLeft="@drawable/ic_book_24"
         android:hint="Nombre"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
         android:textAlignment="center"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="10dp"
@@ -31,10 +33,12 @@
         android:id="@+id/txtAutor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="320dp"
+        android:layout_marginTop="240dp"
         android:drawableLeft="@drawable/ic_baseline_person_24"
         android:hint="Autor"
         android:textAlignment="center"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="10dp" />
 
@@ -42,7 +46,9 @@
         android:id="@+id/txtGenero"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="390dp"
+        android:layout_marginTop="290dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
         android:drawableLeft="@drawable/ic_baseline_collections_bookmark_24"
         android:hint="Genero"
         android:textAlignment="center"
@@ -53,9 +59,11 @@
         android:id="@+id/txtPaginas"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="460dp"
+        android:layout_marginTop="340dp"
         android:drawableLeft="@drawable/ic_baseline_pages_24"
         android:hint="Numero de Paginas"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
         android:textAlignment="center"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="10dp" />
@@ -64,7 +72,9 @@
         android:id="@+id/btnGuardar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="528dp"
+        android:layout_marginStart="90dp"
+        android:layout_marginEnd="90dp"
+        android:layout_marginTop="450dp"
         android:text="Guardar"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="0dp" />
