--- a/app/src/main/res/layout/fragment_add_prestamo.xml
+++ b/app/src/main/res/layout/fragment_add_prestamo.xml
@@ -8,62 +8,66 @@
     android:background="?attr/backgroundColor">
 
     <EditText
-        android:id="@+id/TxtLibro"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="280dp"
-        android:drawableStart="@drawable/ic_book_24"
-        android:hint="Nombre del libro"
-        android:inputType="text"
-        android:textAlignment="center"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/TxtFechaEntrega"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="420dp"
-        android:drawableStart="@drawable/ic_date_24"
-        android:hint="Fecha de Entrega"
-        android:inputType="date"
-        android:textAlignment="center"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="16dp" />
-
-    <Button
-        android:id="@+id/btnGuardarP"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="496dp"
-        android:text="Agregar"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="16dp" />
-
-    <EditText
         android:id="@+id/TxtEstudiante"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="212dp"
+        android:layout_marginTop="190dp"
         android:drawableStart="@drawable/ic_baseline_person_24"
         android:hint=" Nombre del Estudiante"
-        android:inputType="text"
         android:textAlignment="center"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
         app:layout_constraintBaseline_toTopOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="16dp" />
+        tools:layout_editor_absoluteX="10dp" />
+
+    <EditText
+        android:id="@+id/TxtLibro"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="240dp"
+        android:drawableStart="@drawable/ic_book_24"
+        android:hint="Nombre del libro"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:textAlignment="center"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="10dp" />
 
     <EditText
         android:id="@+id/TxtFechaRetiro"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="352dp"
+        android:layout_marginTop="290dp"
         android:drawableStart="@drawable/ic_date_24"
         android:hint="Fecha de Retiro"
-        android:inputType="date"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
         android:textAlignment="center"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="16dp" />
+        tools:layout_editor_absoluteX="10dp" />
+
+    <EditText
+        android:id="@+id/TxtFechaEntrega"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="340dp"
+        android:drawableStart="@drawable/ic_date_24"
+        android:hint="Fecha de Entrega"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:textAlignment="center"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="10dp" />
+
+    <Button
+        android:id="@+id/btnGuardarP"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="450dp"
+        android:layout_marginStart="90dp"
+        android:layout_marginEnd="90dp"
+        android:text="Guardar"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
