--- a/app/src/main/res/layout/fragment_libro.xml
+++ b/app/src/main/res/layout/fragment_libro.xml
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
-        android:src="@drawable/ic_filter_24"
+        android:src="@drawable/ic_update_24"
         app:layout_constraintBottom_toTopOf="@+id/BtnAgregar"
         app:layout_constraintEnd_toEndOf="parent"
 
