--- a/app/src/main/res/layout/fragment_libro.xml
+++ b/app/src/main/res/layout/fragment_libro.xml
@@ -20,26 +20,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <com.getbase.floatingactionbutton.FloatingActionsMenu
         android:id="@+id/BtnExtend"
-        app:fab_addButtonColorNormal="@color/Orange"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="24dp"
+        android:layout_width="51dp"
+        android:layout_height="152dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:src="@drawable/ic_add_24"
+        app:fab_addButtonColorNormal="@color/Orange"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
 
         tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck">
+
         <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/BtnAgregar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:fab_icon="@drawable/ic_add_library"
-            app:fab_title="Agregar"
-            android:id="@+id/BtnAgregar"
             app:fab_colorNormal="@color/Orange"
-            />
+            app:fab_icon="@drawable/ic_add_library"
+            app:fab_title="Agregar" />
     </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
