--- a/app/src/main/res/layout/fragment_libro.xml
+++ b/app/src/main/res/layout/fragment_libro.xml
@@ -23,8 +23,8 @@
 
     <com.getbase.floatingactionbutton.FloatingActionsMenu
         android:id="@+id/BtnExtend"
-        android:layout_width="51dp"
-        android:layout_height="152dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:src="@drawable/ic_add_24"
@@ -38,6 +38,8 @@
             android:id="@+id/BtnAgregar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
             app:fab_colorNormal="@color/Orange"
             app:fab_icon="@drawable/ic_add_library"
             app:fab_title="Agregar" />
