--- a/app/src/main/res/layout/fragment_addlibro.xml
+++ b/app/src/main/res/layout/fragment_addlibro.xml
@@ -32,32 +32,30 @@
         tools:layout_editor_absoluteX="10dp"
         android:inputType="number"/>
 
-    <androidx.appcompat.widget.AppCompatSpinner
+    <Spinner
         android:id="@+id/txtAutor"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="240dp"
-        android:drawableLeft="@drawable/ic_baseline_person_24"
-        android:hint="Autores"
-        android:textAlignment="center"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="50dp"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="10dp" />
+        android:layout_width="320dp"
+        android:layout_height="43dp"
+        app:layout_constraintBottom_toTopOf="@+id/txtPaginas"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.549"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtNombre"
+        app:layout_constraintVertical_bias="0.193"
+        tools:ignore="MissingConstraints" />
 
-    <EditText
+
+    <Spinner
         android:id="@+id/txtGenero"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="290dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="50dp"
-        android:drawableLeft="@drawable/ic_baseline_collections_bookmark_24"
-        android:hint="Genero"
-        android:textAlignment="center"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="10dp" />
-
+        android:layout_width="320dp"
+        android:layout_height="43dp"
+        app:layout_constraintBottom_toTopOf="@+id/txtPaginas"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.549"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtNombre"
+        app:layout_constraintVertical_bias="0.866"
+        tools:ignore="MissingConstraints" />
     <EditText
         android:id="@+id/txtPaginas"
         android:layout_width="match_parent"
