--- a/app/src/main/res/layout/fragment_addlibro.xml
+++ b/app/src/main/res/layout/fragment_addlibro.xml
@@ -30,10 +30,10 @@
         android:textAlignment="center"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="10dp"
-        android:inputType="number"/>
+        android:inputType="text"/>
 
     <Spinner
-        android:id="@+id/txtAutor"
+        android:id="@+id/spAutor"
         android:layout_width="320dp"
         android:layout_height="43dp"
         app:layout_constraintBottom_toTopOf="@+id/txtPaginas"
@@ -46,7 +46,7 @@
 
 
     <Spinner
-        android:id="@+id/txtGenero"
+        android:id="@+id/spType"
         android:layout_width="320dp"
         android:layout_height="43dp"
         app:layout_constraintBottom_toTopOf="@+id/txtPaginas"
