--- a/app/src/main/res/layout/fragment_libro.xml
+++ b/app/src/main/res/layout/fragment_libro.xml
@@ -43,6 +43,16 @@
             app:fab_colorNormal="@color/Orange"
             app:fab_icon="@drawable/ic_add_library"
             app:fab_title="Agregar" />
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/BtnUpdate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            app:fab_colorNormal="@color/Orange"
+            app:fab_icon="@drawable/ic_update_24"
+            app:fab_title="Agregar" />
     </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
