--- a/app/src/main/res/layout/fragment_add_prestamo.xml
+++ b/app/src/main/res/layout/fragment_add_prestamo.xml
@@ -7,67 +7,61 @@
     tools:context=".fragments.agregar.AddPrestamoFragment"
     android:background="?attr/backgroundColor">
 
-    <EditText
-        android:id="@+id/TxtEstudiante"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="190dp"
-        android:drawableStart="@drawable/ic_baseline_person_24"
-        android:hint=" Nombre del Estudiante"
-        android:textAlignment="center"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="50dp"
-        app:layout_constraintBaseline_toTopOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="10dp" />
+    <Spinner
+        android:id="@+id/spEstudiante"
+        android:layout_width="320dp"
+        android:layout_height="43dp"
+        app:layout_constraintBottom_toTopOf="@+id/spLibro"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints" />
 
-    <EditText
-        android:id="@+id/TxtLibro"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="240dp"
-        android:drawableStart="@drawable/ic_book_24"
-        android:hint="Nombre del libro"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="50dp"
-        android:textAlignment="center"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="10dp" />
+    <Spinner
+        android:id="@+id/spLibro"
+        android:layout_width="320dp"
+        android:layout_height="43dp"
+        app:layout_constraintBottom_toTopOf="@+id/TxtFechaRetiro"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/TxtFechaRetiro"
-        android:layout_width="match_parent"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="290dp"
         android:drawableStart="@drawable/ic_date_24"
         android:hint="Fecha de Retiro"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="50dp"
         android:textAlignment="center"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="10dp" />
+        android:inputType="text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/TxtFechaEntrega"
-        android:layout_width="match_parent"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="340dp"
         android:drawableStart="@drawable/ic_date_24"
         android:hint="Fecha de Entrega"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="50dp"
         android:textAlignment="center"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="10dp" />
+        android:inputType="text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <Button
         android:id="@+id/btnGuardarP"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="450dp"
-        android:layout_marginStart="90dp"
-        android:layout_marginEnd="90dp"
         android:text="Guardar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
