Minior fixes on color, CardView and inputs, also changes on action bar titles

--- a/app/src/main/res/layout/fragment_actualizar_libro.xml
+++ b/app/src/main/res/layout/fragment_actualizar_libro.xml
@@ -65,7 +65,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        android:inputType="number"/>
 
     <Button
         android:id="@+id/btnGuardar"
