--- a/app/src/main/res/layout/fragment_addlibro.xml
+++ b/app/src/main/res/layout/fragment_addlibro.xml
@@ -66,6 +66,7 @@
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
         android:textAlignment="center"
+        android:inputType="number"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="10dp" />
 
