--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,9 +7,9 @@
         <item name="colorOnPrimary">@color/WhiteCream</item>
 
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">#f86e30</item>
+        <item name="colorSecondary">#5870d4</item>
         <item name="colorSecondaryVariant">#f3a234</item>
-        <item name="colorOnSecondary">@color/white</item>
+        <item name="colorOnSecondary">@color/black</item>
         <item name="backgroundColor">@color/WhiteCream</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
